syntax = "proto3";

package file;

option go_package = "./pb";

message ListFilesRequest {};
message ListFilesResponse {
  repeated string filenames = 1;
};

message DownloadRequest {
  string filename = 1;
};
message DownloadResponse {
  bytes data = 1;
};

message UploadRequest {
  bytes data = 1;
}
message UploadResponse {
  int32 size = 1;
}

message UploadAndNotifyProgressRequest {
  bytes data = 1;
}
message UploadAndNotifyProgressResponse {
  string message = 1;
}

service FileService {
  // Server Streaming RPC用のメソッド
  rpc ListFiles(ListFilesRequest) returns(ListFilesResponse);
  // Server Streaming RPC用のメソッド
  rpc Download(DownloadRequest) returns(stream DownloadResponse);
  // Client Streaming RPC用のメソッド
  rpc Upload(stream UploadRequest) returns(UploadResponse);
  // Bidirectional Streaming RPC用のメソッド
  rpc UploadAndNotifyProgress(stream UploadAndNotifyProgressRequest) returns(stream UploadAndNotifyProgressResponse);
};